Enable the translate bubble to be dismissed when user ignores it.

Refactored the dismiss mechanism from passwords to the location bar
bubble delegate, which is a common location.

Not all bubbles will need this because it's only necessary on bubbles
that do not start focused. Like the passwords and translate bubbles.

BUG=619192

Review-Url: https://codereview.chromium.org/2061523002
Cr-Commit-Position: refs/heads/master@{#399543}

Former-commit-id: 153dc6af7e1ac70671eefd48faed85c85cb151f0